--- a/_pages/topics.html
+++ b/_pages/topics.html
@@ -1,10 +1,10 @@
 ---
 key: 2
-title: Topics
-permalink: /topics/
+title: Il corso
+permalink: /il-corso/
 options: fullwidth
-excerpt: Just ramblings and musings? Nay, nay
-image: pic01.jpg
+excerpt: Mauris mollis tincidunt felis.  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.  Fusce sagittis, libero non molestie mollis, magna orci ultrices dolor, at vulputate neque nulla lacinia eros.  Nam vestibulum accumsan nisl.  Mauris ac felis vel velit tristique imperdiet.  Nullam eu ante vel est convallis dignissim.  Cras placerat accumsan nulla.  Aliquam posuere.  Etiam vel tortor sodales tellus ultricies commodo.  Nam vestibulum accumsan nisl.  Proin neque massa, cursus ut, gravida ut, lobortis eget, lacus.  Nunc aliquet, augue nec adipiscing interdum, lacus tellus malesuada massa, quis varius mi purus non odio.  Nam vestibulum accumsan nisl.  Nulla facilisis, risus a rhoncus fermentum, tellus tellus lacinia purus, et dictum nunc justo sit amet elit.  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.  Nullam tempus.  Pellentesque dapibus suscipit ligula.  Donec at pede.  Pellentesque tristique imperdiet tortor.  Sed id ligula quis est convallis tempor.
+image: alessandro.jpg
 background-image: pic01.jpg
 ---
 
