--- a/_pages/works.html
+++ b/_pages/works.html
@@ -2,9 +2,9 @@
 key: 1
 title: Works
 permalink: /works/
-excerpt: The portfolio&mdash;things I enjoyed creating
-image: pic02.jpg
-background-image: pic02.jpg
+excerpt: Cras placerat accumsan nulla.  In id erat non orci commodo lobortis.  Fusce sagittis, libero non molestie mollis, magna orci ultrices dolor, at vulputate neque nulla lacinia eros.  Suspendisse potenti.  Phasellus neque orci, porta a, aliquet quis, semper a, massa.  In id erat non orci commodo lobortis.  Nam euismod tellus id erat.  Phasellus purus.  Mauris mollis tincidunt felis.  Sed diam.  Fusce commodo.  The portfolio &mdash;things I enjoyed creating
+image: pairing.png
+background-image: pairing.png
 ---
 {%
 if site.social.linkedin-square %}
